hphp/hack/test/typecheck/lambda_in_pipe.php.like_types.exp
File "lambda_in_pipe.php", line 9, characters 31-60:
Cannot determine types of lambda parameters in strict mode. Please add type hints on parameters. (Typing[4224])
